--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
    </head>
    <body>
       <h1>Minimal AutoCRT</h1>
-      <form method="POST" action="{{ url_for('browse_file') }}">
-         <button type="submit" name="button" value="browse_file">Browse MALDI-TOF input</button>
+      <form method="POST" action="{{ url_for('upload_file') }}">
+         <button type="submit" name="button" value="upload_file">Browse MALDI-TOF input</button>
       </form>
       <p>{{ dataset_label }}</p>
       <form method="POST" action="{{ url_for('browse_directory') }}">
